--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>bootstrap-dashboard</title>
+    <meta name="author" content="Xhulio Dreni">
+    <meta name="description" content="webapp bootstrap">
+    <!-- Librerie esterne -->
+
+    
+    <!-- Foglio di stile css personale -->
+    <link rel="stylesheet" href="style/style.css">
+
 </head>
 <body>
     
