--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <meta name="author" content="Xhulio Dreni">
     <meta name="description" content="webapp bootstrap">
     <!-- Librerie esterne -->
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     
     <!-- Foglio di stile css personale -->
     <link rel="stylesheet" href="style/style.css">
 
 </head>
 <body>
-    
+
+    <!-- Java Script bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
