--- a/index.html
+++ b/index.html
@@ -15,21 +15,22 @@
 
 </head>
 <body>
-    <header class="d-flex align-items-center">
+    <header class="d-flex align-items-center"> <!-- centratura del contenuto -->
 
+        <!-- NAVBAR con logo e barra di ricerca -->
         <nav class="container text-center align-items-center">
             <div class="row align-items-center">
-                <div class="col-2">
+                <div class="col-2"> <!-- Logo -->
                     <a class="navbar-brand" href="#">
                         <img src="img/mobile-logo.png" id="logo" alt="Bootstrap">
                     </a>
                 </div>
-                <div class="col-8">
+                <div class="col-8"> <!-- barra di ricerca -->
                     <form>
                     <input class="form-control me-2" type="search" placeholder="Prova a cercare: Lezioni di Laravel" aria-label="Search">
                     </form>
                 </div>
-                <div class="col-2">
+                <div class="col-2"> <!-- link con hidden menu -->
                     <div class="nav-item dropdown">
                         <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             <i class="fa-solid fa-bell"></i>
@@ -45,7 +46,6 @@
             </div>
         </nav>
     
-
     </header>
 
     <div class="bot-content">
