fix layout sidebar

--- a/index.html
+++ b/index.html
@@ -49,13 +49,36 @@
     </header>
 
     <div class="bot-content">
-        <div class="sidebar">
-            <div class="sidebar-top">
-
-            </div>
-            <div class="sidebar-bot">
-            
-            </div>
+        <div class="sidebar fs-4 py-3">
+            <section class="sidebar-top"> <!-- parte superiore -->
+                <ul class="nav flex-column align-items-center">
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">
+                        <span><i class="fa-solid fa-house"></i></span>
+                      </a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">
+                        <span><i class="fa-solid fa-chart-simple"></i></span>
+                      </a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">
+                        <span><i class="fa-solid fa-signal"></i></span>
+                      </a>
+                    </li>
+          
+                </ul>
+            </section>
+            <section class="sidebar-bot"> <!-- parte inferiore -->
+                <ul class="nav flex-column align-items-center">
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">
+                        <span><i class="fa-solid fa-house"></i></span>
+                      </a>
+                    </li>
+                </ul>
+            </section>
         </div>
         <main>
             <section class="spotlight">
