fix layout table

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="page-header d-flex align-items-center"> <!-- centratura del contenuto -->
 
         <!-- NAVBAR con logo e barra di ricerca -->
-        <nav class="container text-center align-items-center">
+        <nav class="container-fluid text-center align-items-center">
             <div class="row align-items-center">
                 <div class="col-2"> <!-- Logo -->
                     <a class="navbar-brand" href="#">
@@ -140,10 +140,10 @@
                                     Prossime classi
                                 </div>
                                 <div class="card-body">
-                                    <table class="table table-hover" style="width:100%">
+                                    <table class="table table-hover text-center" style="width:100%">
                                         <thead>
                                           <tr>
-                                            <th scope="col" style="width:40%">Nome</th>
+                                            <th scope="col" class="text-start" style="width:40%">Nome</th>
                                             <th scope="col">Data Inizio</th>
                                             <th scope="col">ROI</th>
                                             <th scope="col">Stato</th>
@@ -152,7 +152,7 @@
                                         </thead>
                                         <tbody>
                                           <tr>
-                                            <td>
+                                            <td class="text-start">
                                                 <div>
                                                     <img src="img/class-avatar.jpg" id="icon-table" alt="">
                                                     <span>Classe 75</span>
@@ -170,7 +170,7 @@
                                             </td>
                                           </tr>
                                           <tr>
-                                            <td>
+                                            <td class="text-start">
                                                 <div>
                                                     <img src="img/class-avatar.jpg" id="icon-table" alt="">
                                                     <span>Classe 76</span>
@@ -188,7 +188,7 @@
                                             </td>
                                           </tr>
                                           <tr>
-                                            <td>
+                                            <td class="text-start">
                                                 <div>
                                                     <img src="img/class-avatar.jpg" id="icon-table" alt="">
                                                     <span>Classe 77</span>
@@ -206,7 +206,7 @@
                                             </td>
                                           </tr>
                                           <tr>
-                                            <td>
+                                            <td class="text-start">
                                                 <div>
                                                     <img src="img/class-avatar.jpg" id="icon-table" alt="">
                                                     <span>Classe 78</span>
@@ -224,7 +224,7 @@
                                             </td>
                                           </tr>
                                           <tr>
-                                            <td>
+                                            <td class="text-start">
                                                 <div>
                                                     <img src="img/class-avatar.jpg" id="icon-table" alt="">
                                                     <span>Classe 79</span>
@@ -242,7 +242,7 @@
                                             </td>
                                           </tr>
                                           <tr>
-                                            <td>
+                                            <td class="text-start">
                                                 <div>
                                                     <img src="img/class-avatar.jpg" id="icon-table" alt="">
                                                     <span>Classe 80</span>
@@ -260,7 +260,7 @@
                                             </td>
                                           </tr>
                                           <tr>
-                                            <td>
+                                            <td class="text-start">
                                                 <div>
                                                     <img src="img/class-avatar.jpg" id="icon-table" alt="">
                                                     <span>Classe 81</span>
@@ -278,7 +278,7 @@
                                             </td>
                                           </tr>
                                           <tr>
-                                            <td>
+                                            <td class="text-start">
                                                 <div>
                                                     <img src="img/class-avatar.jpg" id="icon-table" alt="">
                                                     <span>Classe 82</span>
