--- a/index.html
+++ b/index.html
@@ -135,13 +135,15 @@
                 <div class="p-4">
                     <div class="row">
                         <div class="col-12 col-md-8">
+                            <!-- tabella con tutte le classi -->
                             <div class="card mb-4">
                                 <div class="card-header">
                                     Prossime classi
                                 </div>
                                 <div class="card-body">
                                     <table class="table table-hover text-center" style="width:100%">
-                                        <thead>
+                                        <!-- parte superiore -->
+                                        <thead> 
                                           <tr>
                                             <th scope="col" class="text-start" style="width:40%">Nome</th>
                                             <th scope="col">Data Inizio</th>
@@ -299,6 +301,7 @@
                                     </table>
                                 </div>    
                             </div>
+                            <!-- FAQ -->
                             <div class="card mb-4">
                                 <div class="card-header">
                                     F.A.Q
@@ -340,6 +343,7 @@
                             </div>
                         </div>
                         <div class="col-12 col-md-4">
+                            <!-- checklist -->
                             <div class="card mb-4">
                                 <div class="card-header">
                                     Todo
@@ -361,6 +365,7 @@
                                     </ul>
                                 </div>
                             </div>
+                            <!-- card con grafico -->
                             <div class="card mb-4">
                                 <div class="card-body">
                                     <div class="card">
