--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
                             <i class="fa-solid fa-bell"></i>
                         </a>
                         <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
                         </ul>
                     </div>
                 </div>
@@ -69,18 +69,21 @@
             <section class="sidebar-top"> <!-- parte superiore -->
                 <ul class="nav flex-column align-items-center">
                     <li class="nav-item">
-                      <a class="nav-link" href="#">
-                        <span><i class="fa-solid fa-house"></i></span>
+                      <a class="nav-link d-flex align-items-center" href="#">
+                        <span class="pe-2"><i class="fa-solid fa-house"></i></span>
+                        <span class="d-none d-md-block">Home</span>
                       </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">
-                        <span><i class="fa-solid fa-chart-simple"></i></span>
+                      <a class="nav-link d-flex align-items-center" href="#">
+                        <span class="pe-2"><i class="fa-solid fa-chart-simple"></i></span>
+                        <span class="d-none d-md-block">Stats</span>
                       </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">
-                        <span><i class="fa-solid fa-signal"></i></span>
+                      <a class="nav-link d-flex align-items-center" href="#">
+                        <span class="pe-2"><i class="fa-solid fa-signal"></i></span>
+                        <span class="d-none d-md-block">Signals</span>
                       </a>
                     </li>
           
@@ -89,8 +92,9 @@
             <section class="sidebar-bot"> <!-- parte inferiore -->
                 <ul class="nav flex-column align-items-center">
                     <li class="nav-item">
-                      <a class="nav-link" href="#">
-                        <span><i class="fa-solid fa-house"></i></span>
+                      <a class="nav-link d-flex" href="#">
+                        <span class="me-2"><i class="fa-solid fa-house"></i></span>
+                        <span class="d-none d-md-block">Admin</span>
                       </a>
                     </li>
                 </ul>
@@ -103,20 +107,76 @@
             <header class="main-header py-3">
 
                 <div class="container-fluid">
-                    <div class="row align-items-center g-3">
+                    <div class="row align-items-center justify-content-md-between">
                         <!-- parte del nuovo studente -->
-                        <div class="col-12 col-md-4 d-flex align-items-center">
+                        <div class="col-12 col-md-2 d-flex align-items-center order-md-1 justify-content-md-end">
                             <div class="me-2">Nuovo Studente</div>
-                            <button class="btn btn-outline-light" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><i class="fa-solid fa-plus"></i></button>
-                            <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
-                            <div class="offcanvas-header">
-                                <h5 class="offcanvas-title" id="offcanvasRightLabel">Offcanvas right</h5>
-                                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                                <button class="btn btn-outline-light" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><i class="fa-solid fa-plus"></i></button>
+                                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+                                <div class="offcanvas-header">
+                                    <h5 class="offcanvas-title" id="offcanvasRightLabel">Inserisci un nuovo studente</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                                </div>
+                                <div class="offcanvas-body">
+                                    <form>
+                                        <div class="d-flex">
+                                            <div class="mb-3">
+                                                <label for="exampleInputEmail1" class="form-label">Nome</label>
+                                                <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                                            </div>
+                                            <div class="mb-3">
+                                                <label for="exampleInputPassword1" class="form-label">Cognome</label>
+                                                <input type="text" class="form-control" id="exampleInputPassword1">
+                                            </div>
+                                        </div>
+                                        <div class="d-flex">
+                                            <div class="mb-3">
+                                                <label for="basic-url" class="form-label">Email</label>
+                                                <div class="input-group">
+                                                  <span class="input-group-text" id="basic-addon3">@</span>
+                                                  <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3 basic-addon4">
+                                                </div>
+                                            </div>
+                                            <div class="mb-3">
+                                                <label for="exampleInputPassword1" class="form-label">Password</label>
+                                                <input type="password" class="form-control" id="exampleInputPassword1">
+                                            </div>
+                                        </div>
+                                        <div class="mb-3">
+                                            <label for="exampleInputEmail1" class="form-label">Indirizzo</label>
+                                            <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                                        </div>
+                                        <div class="d-flex">
+                                            <div class="mb-3">
+                                                <label for="exampleInputEmail1" class="form-label">Citta'</label>
+                                                <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                                            </div>
+                                            <div class="mb-3">
+                                                <label for="disabledSelect" class="form-label">Stato</label>
+                                                <select id="Select" class="form-select">
+                                                  <option>Scegli...</option>
+                                                  <option>Scegli-1</option>
+                                                  <option>Scegli-2</option>
+                                                </select>
+                                            </div>
+                                            <div class="mb-3">
+                                                <label for="exampleInputEmail1" class="form-label">Cap</label>
+                                                <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                                            </div>
+                                        </div>
+                                        <div class="mb-3">
+                                            <label for="formFile" class="form-label">Foto</label>
+                                            <input class="form-control" type="file" id="formFile">
+                                        </div>
+                                        <div class="mb-3 form-check">
+                                          <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                                          <label class="form-check-label" for="exampleCheck1">Selezione per proseguire</label>
+                                        </div>
+                                        <button type="submit" class="btn btn-primary">Salva</button>
+                                        <button type="submit" class="btn btn-warning">Svuota</button>
+                                    </form>
+                                </div>
                             </div>
-                            <div class="offcanvas-body">
-                                ...
-                            </div>
-                        </div>
                         </div>
                         <!-- titolo con app -->
                         <div class="col-12 col-md-4 align-items-center">
@@ -126,19 +186,25 @@
                                     <span class="badge rounded-pill text-bg-dark">Piano blaze</span>
                                 </div>
                                 <div class="col d-flex align-items-center">
-                                    <span class="badge rounded-pill text-bg-dark">3 app</span>
-                                    <span><i class="fa-solid fa-angles-right fa-xs"></i></span>
-                                    <span class="badge rounded-pill text-bg-dark"><i class="fa-solid fa-plus"></i></span>
+                                    <span class="badge rounded-pill text-bg-dark me-2">3 app</span>
+                                    <span class="me-2"><i class="fa-solid fa-angles-right fa-xs"></i></span>
+                                    <span class="badge rounded-pill text-bg-dark d-md-none"><i class="fa-solid fa-plus"></i></span>
+                                    <div class="d-none d-md-block">
+                                        <span class="badge rounded-pill text-bg-dark">Boolean mobile app</i></span>
+                                        <span class="badge rounded-pill text-bg-dark">Boolean web app</i></span>
+                                        <span class="badge rounded-pill text-bg-dark">Boolean blog app</span>
+
+                                    </div>
                                    
                                 </div>
                             </div>
                         </div>
                         <!-- counter sul numero di studenti online -->
-                        <div class="col-12 col-md-4 align-items-center">
+                        <div class="col-12 col-md-2">
                             <div>
                                 studente online negli ultimi 30 minuti
                             </div>
-                            <div>
+                            <div class="fs-1">
                                 125
                             </div>
                         </div>
